# cpp-ai-interview-prep

./: .gitignore  CONTRIBUTING.md  GPU_TESTING_GUIDE.md  README.md
01_cpp_fundamentals/: README.md  auto_and_decltype.cpp  classes.cpp  concepts.cpp  move_semantics.cpp  templates.cpp
02_data_structures/: binary_tree.cpp  graph.cpp  vector_operations.cpp
03_algorithms/: README.md  dynamic_programming.cpp  sorting.cpp
04_memory_management/: README.md  smart_pointers.cpp
05_parallel_programming/: openmp_basics.cpp  threads_basics.cpp
06_gpu_hip/: Makefile  README.md  memory_patterns.hip.cpp
07_ai_ml_concepts/: README.md  linear_regression.cpp  matrix_operations.cpp  neural_network_basics.cpp
08_cuda_basics/: README.md  matrix_multiply.cu  vector_add.cu
10_transpose/: README.md
10_transpose/cuda/: 03_bank_conflict_free.cu  transpose_utils.h
10_transpose/hip/: 02_coalesced_transpose.hip.cpp  transpose_utils.h
11_matrix_multiply/: README.md
11_matrix_multiply/cuda/: matmul_utils.h
11_matrix_multiply/hip/: 01_naive_matmul.hip.cpp  02_tiled_matmul.hip.cpp  matmul_utils.h
11_matrix_multiply/x86/: sparse_matmul.cpp
13_reductions/cuda/: 02_shared_reduction.cu  03_warp_reduction.cu  reduction_utils.h
13_reductions/hip/: 01_naive_reduction.hip.cpp  02_shared_reduction.hip.cpp  reduction_utils.h
14_matmul_vs_matvec/: run_benchmarks.sh
14_matmul_vs_matvec/cpu/: comparison.cpp
14_matmul_vs_matvec/cuda/: Makefile  comparison.cu
14_matmul_vs_matvec/multithreaded/: Makefile  README.md
15_memory_allocators/: COMPARISON.md  README.md
algorithms/: searching.cpp
cpp-fundamentals/: README.md  coroutines.cpp  lambdas.cpp  ranges.cpp  smart_pointers.cpp
cuda-basics/: hello_cuda.cu
data-structures/: README.md  hash_table.cpp  linked_list.cpp
dgemm-gpu-techniques/: README.md  assembly_enhancements.md  cpp_techniques.cpp  mfma_examples.cpp
dictionary-search/: CMakeLists.txt  README.md
dictionary-search/cuda/: CMakeLists.txt  dictionary_search.cu
dictionary-search/hip/: CMakeLists.txt  dictionary_search.cpp
dictionary-search/mpi/: CMakeLists.txt  dictionary_search_mpi.cpp
dictionary-search/pthreads/: CMakeLists.txt  dictionary_search_pthreads.cpp
dictionary-search/serial/: CMakeLists.txt  dictionary_search.cpp
gpu-hip/: matrix_multiply.hip.cpp  vector_add.hip.cpp
heap-vs-stack/: Makefile  README.md  comprehensive_usage  comprehensive_usage.cpp  comprehensive_usage.rs  comprehensive_usage_rs  heap_example  heap_example.cpp  heap_example.rs  heap_example_rs  memory_lifecycle  memory_lifecycle.cpp  memory_lifecycle.rs  memory_lifecycle_rs  stack_overflow  stack_overflow.cpp  stack_overflow.rs  stack_overflow_rs  stack_vs_heap  stack_vs_heap.cpp  stack_vs_heap.rs  stack_vs_heap_rs
matmul-vs-matvec/: ANALYSIS.md  QUICKSTART.md  README.md  SUMMARY.md  build_all.sh
matmul-vs-matvec/cpu/: Makefile  README.md
matmul-vs-matvec/cuda/: README.md
matmul-vs-matvec/multithreaded/: comparison_omp.cpp
matrix-multiply/: README.md
matrix-multiply/cuda/: 01_naive_matmul.cu  02_tiled_matmul.cu  04_asm_optimized_matmul.cu
matrix-multiply/hip/: 03_optimized_matmul.hip.cpp
matrix-multiply/python/: matmul.py
matrix-multiply/x86/: dense_matmul.cpp
matrix-vector/: README.md
max-increase-skyline/: CMakeLists.txt  README.md  build.sh
max-increase-skyline/benchmarks/: benchmark.cpp
max-increase-skyline/docs/: INTERVIEW_GUIDE.md  OPTIMIZATIONS.md
max-increase-skyline/rust-impl/: Cargo.toml  README.md
max-increase-skyline/rust-impl/benches/: benchmarks.rs
max-increase-skyline/rust-impl/src/: cuda_gpu.rs  lib.rs  parallel.rs  rocm_gpu.rs
max-increase-skyline/src/: baseline.cpp  cpu_optimized.cpp  cuda_gpu.cu  openmp_parallel.cpp  rocm_gpu.cpp
memory-allocators/: INSTALL.md
memory-allocators/benchmarks/: Makefile  basic_bench.cpp  multithreaded_bench.cpp
memory-management/: README.md  move_semantics.cpp  raii.cpp
parallel-programming/: README.md  async_futures.cpp
pass-by-reference-vs-value/: Makefile  README.md  basic_examples  basic_examples.cpp  common_patterns  common_patterns.cpp  const_correctness  const_correctness.cpp  lambda_captures  lambda_captures.cpp  move_semantics  move_semantics.cpp  perfect_forwarding  perfect_forwarding.cpp  performance_comparison  performance_comparison.cpp  rvo_and_optimization  rvo_and_optimization.cpp  smart_pointers  smart_pointers.cpp
reductions/: README.md
reductions/cuda/: 01_naive_reduction.cu
reductions/hip/: 03_warp_reduction.hip.cpp
segfault-examples/: 01_null_pointer  01_null_pointer.cpp  01_null_pointer.rs  01_null_pointer_rs  02_use_after_free  02_use_after_free.cpp  02_use_after_free.rs  02_use_after_free_rs  03_buffer_overflow.cpp  03_buffer_overflow.rs  03_buffer_overflow_rs  04_all_segfaults.cpp  04_rust_safety.rs  04_rust_safety_rs  Makefile  README.md
softmax-optimization/: README.md
softmax-optimization/cuda/: naive.cu  optimized.cu  super_optimized.cu
softmax-optimization/hip/: naive.hip  optimized.hip  super_optimized.hip
softmax-optimization/openmp/: naive  naive.cpp  optimized  optimized.cpp  super_optimized  super_optimized.cpp
transpose/cuda/: 01_naive_transpose.cu  02_coalesced_transpose.cu
transpose/hip/: 01_naive_transpose.hip.cpp  03_bank_conflict_free.hip.cpp
trig-fusion/: README.md
trig-fusion/cuda/: naive.cu  optimized.cu  super_optimized.cu
trig-fusion/hip/: naive.hip  optimized.hip  super_optimized.hip
trig-fusion/openmp/: naive  naive.cpp  optimized  optimized.cpp  super_optimized  super_optimized.cpp
virtual-vs-template/: 01_virtual_polymorphism.cpp  02_template_polymorphism.cpp  03_performance_comparison.cpp  README.md
